# gltf-transform-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/display/: main.rs
examples/export/: main.rs
examples/roundtrip/: main.rs
examples/tree/: main.rs
src/: buffer.rs  document.rs  export.rs  gltf.rs  import.rs  lib.rs  math.rs
src/accessor/: mod.rs
src/gltf_io/: export.rs  glb_reader.rs  gltf_reader.rs  import.rs  mod.rs  uri_reader.rs
src/mesh/: mod.rs
src/mesh_old/: mod.rs
src/platform_io/: export.rs  glb_reader.rs  gltf_reader.rs  import.rs  mod.rs
src/properties/: animation.rs  buffer.rs  camera.rs  extension.rs  extras_extensions.rs  image.rs  material.rs  mesh.rs  mod.rs  node.rs  root.rs  scene.rs  skin.rs  texture.rs  traits.rs
src/properties/accessor/: element.rs  generic_accessor.rs  mod.rs
src/utils/: mod.rs
tests/: import_sanity_check.rs  roundtrip_binary_gltf.rs  test_wrapper.rs
