[package]
name = "gltf-transform-rs"
version = "0.1.0"
authors = ["Sean Rennie <rnnsea001@gmail.com>", "David Harvey-Macaulay <alteous@outlook.com>"]
description = "glTF 2.0 manipulation library"
# documentation = "https://docs.rs/gltf"
# repository = "https://github.com/gltf-rs/gltf"
# homepage = "https://github.com/gltf-rs/gltf"
readme = "README.md"
keywords = ["glTF", "3D", "asset", "model", "scene"]
license = "MIT OR Apache-2.0"
include = ["**/*.rs", "Cargo.toml", "LICENSE-*"]
edition = "2018"

# [badges]
# travis-ci = { repository = "gltf-rs/gltf" }

[dev-dependencies]
approx = "0.5"

[dependencies]
base64 =  "0.21.0" 
byteorder = "1.3"
gltf-json = {version="1.1.0", features=["names", "extras"]}
lazy_static = "1"
urlencoding =  "2.1" 
bytemuck = "1.13.1"
rayon = "1.7.0"
image = {version="0.24", features=["jpeg", "png"]}


[features]
default = []
extensions = []
images = []


# [[example]]
# name = "gltf-display"
# path = "examples/display/main.rs"

# [[example]]
# name = "gltf-export"
# path = "examples/export/main.rs"

# [[example]]
# name = "gltf-roundtrip"
# path = "examples/roundtrip/main.rs"

# [[example]]
# name = "gltf-tree"
# path = "examples/tree/main.rs"

# [package.metadata.docs.rs]
# all-features = true
# rustdoc-args = ["--cfg", "docsrs"]
